syntax = "proto3";

package filesteam;

service FileSteamService{
  rpc PushFile (stream fileBuffer) returns (fileBufferResponse);
}

message fileBuffer {
  bytes Buffer =1;
}

message fileBufferResponse{
  int32 Receive = 1;
}